FIX: TC_01 and TC_02

--- a/src/test/Helping files/Env.properties
+++ b/src/test/Helping files/Env.properties
@@ -1,4 +1,4 @@
-randomAPI= https://randomuser.me
+randomAPI= https://random-data-api.com
 TestURL = https://magento.softwaretestingboard.com
 Password = Test@12345
 title = Home Page - Magento eCommerce - website to practice selenium | demo website for automation testing | selenium practice sites | selenium demo sites | best website to practice selenium automation | automation practice sites Magento Commerce - website to practice selenium | demo website for automation testing | selenium practice sites
