FIX: Changed Title

--- a/src/test/Helping files/Env.properties
+++ b/src/test/Helping files/Env.properties
@@ -1,7 +1,7 @@
 randomAPI= https://random-data-api.com
 TestURL = https://magento.softwaretestingboard.com
 Password = Test@12345
-title = Home Page - Magento eCommerce - website to practice selenium | demo website for automation testing | selenium practice sites | selenium demo sites | best website to practice selenium automation | automation practice sites Magento Commerce - website to practice selenium | demo website for automation testing | selenium practice sites
+title = Home Page
 Duplicate_firstName = Dem'yan
 Duplicate_lastName = Divak
 Duplicate_email = dem'yan.divak@example.com
